include_directories(.)


add_executable(01_pointer_base                   01_pointer_base.c)
add_executable(02_pointer_as_parameter           02_pointer_as_parameter.c)
add_executable(03_pointer_calculation            03_pointer_calculation.c)
add_executable(04_pointer_wild                   04_pointer_wild_null.c)
add_executable(05_pointer_use                    05_pointer_use.c)
add_executable(06_pointer_vs_array               06_pointer_vs_array.c)
add_executable(07_pointer_diff_array             07_pointer_diff_array.c)