include_directories(.)

add_executable(structured_bindings               01_structured_bindings.cpp)
add_executable(if_switch_initializer             02_if_switch_initializer.cpp)
add_executable(new_bracket_initializer           03_new_bracket_initializer.cpp)
add_executable(template_class_type_deduction     04_template_class_type_deduction.cpp)
add_executable(if_constexpr                      05_if_constexpr.cpp)
add_executable(inline_variable                   06_inline_variable.cpp)